# max-pfeiffer.github.io

./: .gitignore  README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/: 2024-12-25_kubernetes_cluster_with_talos_proxmox.md  2024-12-26_ceph_cluster_with_raspberry_pi_5.md  2025-01-10_how_to_configure_keycloak_terraform_provider.md  2025-01-20_bootstrap_certificate_authority_for_kubernetes.md  2025-02-07_sso_for_grafana_with_keycloak.md  2025-02-28_securing_prometheus_and_alertmanager_with_oauth2-proxy.md  2025-03-16_ceph_csi_driver.md  2025-04-23_game_server_hosting_on_kubernetes.md  2025-05-10_overhauling_my_ceph_cluster.md  2025-06-27_dynamic_dns_solution.md  2025-08-01_virtualized_nas.md  2025-08-11_harbor_single_node_kubernetes_cluster.md  2025-09-14_velero_kubernetes_backup.md  2025-10-01_overhauling_my_ceph_cluster_again.md  2025-11-21_manual_kubernetes-Install.md  2025-11-30_manual-kubernetes-upgrade.md  2025_07_13_harbor_single_node_kubernetes_cluster.md  2025_08_11_harbor_single_node_kubernetes_cluster.md  2025_08_30_velero_kubernetes_backup.md  2025_09_14_velero_kubernetes_backup.md  2026-01-02_switching_to_cilium_cni.md  2026-01-11_switching_to_cilium_cni.md  2026-01-14_switching_to_cilium_cni.md  2026-01-30_tls_certificates_with_certmanager_http01.md  2026-02-10_tls_certificates_with_certmanager_http01.md  2026-03-21_game_server_hosting_with_cilium.md  2026-03-23_valheim_dedicated_server_with_docker.md  2026-03-26_kubernetes_cluster_with_talos_proxmox_cilium.md  2026-03-27_gitops_secret_management.md  2026-05-21_gitops_secret_management.md  (+2 more)
(+27 files in other folders)
