[tool.poetry]
name = "the-nerdy-tech-blog"
version = "0.1.0"
description = ""
authors = ["Max Pfeiffer <max@maxpfeiffer.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pelican = {version = "4.11.0.post0", extras = ["markdown"]}
pelican-seo = "1.4.0"
pelican-injector = "1.0.0"
minchin-pelican-plugins-nojekyll = "1.2.0"
#pelican-sitemap = {git = "https://github.com/max-pfeiffer/sitemap.git", rev = "bugfix/xml-header"}
pelican-sitemap = "1.2.2"
pelican-redirect = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
